--- a/WebApplication_lab/Views/Shared/_Layout.cshtml
+++ b/WebApplication_lab/Views/Shared/_Layout.cshtml
@@ -23,6 +23,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Entity" asp-action="Index">Entity Linking</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="NamedEntity" asp-action="Index">Named Entity Recognition</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
