--- a/WebApplication_lab/Views/Health/Result.cshtml
+++ b/WebApplication_lab/Views/Health/Result.cshtml
@@ -1,17 +1,34 @@
-﻿@model HealthResultModel
+﻿@model WebApplication_lab.Models.HealthResultModel
+@{
+    ViewData["Title"] = "Результати аналізу";
+}
 
-<h3>Розпізнані об'єкти:</h3>
-<ul>
-    @foreach (var entity in Model.Entities)
-    {
-        <li>@entity</li>
-    }
-</ul>
+<h2>Результати медичного аналізу</h2>
 
-<h3>Категорії:</h3>
-<ul>
-    @foreach (var cat in Model.Categories)
-    {
-        <li>@cat</li>
-    }
-</ul>
+@if (Model.Entities.Count > 0)
+{
+    <h3>Знайдені сутності:</h3>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Сутність</th>
+                <th>Категорія</th>
+            </tr>
+        </thead>
+        <tbody>
+            @for (int i = 0; i < Model.Entities.Count; i++)
+            {
+                <tr>
+                    <td>@Model.Entities[i]</td>
+                    <td>@Model.Categories[i]</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
+else
+{
+    <p>Медичних сутностей не знайдено.</p>
+}
+
+<a asp-action="Index" class="btn btn-secondary">Назад</a>
