--- a/WebApplication_lab/Views/Shared/_Layout.cshtml
+++ b/WebApplication_lab/Views/Shared/_Layout.cshtml
@@ -29,6 +29,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Pii" asp-action="Index">Pii</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Analysis" asp-action="Index">Lab7
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Health" asp-action="Index">Health</a>
                         </li>
                         <li class="nav-item">
