--- a/WebApplication_lab/Views/Analysis/Index.cshtml
+++ b/WebApplication_lab/Views/Analysis/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Медичний аналіз тексту";
 }
 
-<h2>Аналіз медичного тексту</h2>
+<h2>Medical text analysis and personal data masking (Pii & Health)</h2>
 
 <form method="post">
     <div class="form-group">
