--- a/WebApplication_lab/Views/Shared/_Layout.cshtml
+++ b/WebApplication_lab/Views/Shared/_Layout.cshtml
@@ -20,14 +20,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Entity" asp-action="Index">Entity Linking</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="NamedEntity" asp-action="Index">Lab6</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Analysis" asp-action="Index">Lab7
-                            </a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Analysis" asp-action="Index">Lab7</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Health" asp-action="Index">Health</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Translation" asp-action="Index">Lab8</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
