--- a/WebApplication_lab/Views/Shared/_Layout.cshtml
+++ b/WebApplication_lab/Views/Shared/_Layout.cshtml
@@ -29,6 +29,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Translation" asp-action="Index">Lab8</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Ocr" asp-action="Index">Lab9(1)</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ImageAnalysis" asp-action="Index">Lab9(2)</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
