--- a/WebApplication_lab/Views/Shared/_Layout.cshtml
+++ b/WebApplication_lab/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="ImageAnalysis" asp-action="Index">Lab9(2)</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="FaceDetection" asp-action="Index">Lab9(3)</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
