--- a/WebApplication_lab/Views/Shared/_Layout.cshtml
+++ b/WebApplication_lab/Views/Shared/_Layout.cshtml
@@ -38,6 +38,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="FaceDetection" asp-action="Index">Lab9(3)</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ImmersiveReader" asp-action="Index">Lab10</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
@@ -62,6 +65,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+    @RenderSection("Styles", required: false)
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
